* Made template wrappable - Removed splitter and related - Removed fixed pos items

--- a/src/resources/style.css
+++ b/src/resources/style.css
@@ -1,28 +1,3 @@
-body {
-	padding: 50px 0 0 0;
-}
-
-h1 {
-	font-size: 2em;
-	margin: 0.67em 0;
-}
-
-h2 {
-	font-size: 1.5em;
-	margin: 0.83em 0;
-}
-
-h3 {
-	font-size: 1.17em;
-	margin: 1em 0 0.2em 0;
-}
-
-h4 {
-	font-size: 100%;
-	margin: 0;
-	padding: 0;
-}
-
 .panel-heading h2,
 .panel-heading h3 {
 	margin-top: 0;
@@ -78,14 +53,6 @@ pre code {
 
 .hidden {
 	display: none;
-}
-
-/* Left side */
-#left {
-	overflow: auto;
-	width: 270px;
-	height: 100%;
-	position: fixed;
 }
 
 /* Menu */
@@ -211,17 +178,13 @@ pre code {
 
 /* Right side */
 #right {
-	overflow: auto;
-	margin-left: 275px;
-	height: 100%;
-	position: relative;
-	left: 0;
-	right: 0;
 }
 
 #rightInner {
+	/*
 	max-width: 1000px;
 	min-width: 350px;
+	*/
 }
 
 /* Navigation */
@@ -229,7 +192,11 @@ pre code {
 #navigation {
 	margin-bottom: 0;
 }
-
+#navigation .nav li > span {
+	line-height: 1.5em;
+	padding: .2em .4em;
+	display: block;
+}
 .navbar .nav > li > span {
 	position: relative;
 	display: block;
@@ -483,7 +450,7 @@ span.l {
 }
 
 span.l.selected {
-	background: #f9f2d2;
+	background: none;
 }
 
 span.l a {
